--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- 头像栏 -->
         <div style="padding: 10px;align-items: center;justify-content: center;border: bottom 1px solid #999"
             class="flex">
-            <img src="C:\Users\niuni\Desktop\001.png" width="44" alt="">
+            <img src="001.png" width="44" alt="">
             <div style="margin-left: 10px;">假屋和奏</div>
         </div>
         <!-- 导航栏 -->
